    Closes: #548382
  * Adjust code to add deprecation warning for compatability level 4.
    (Man page already said it was deprecated.) Closes: #555899
  * dh_installdocs: Warn if a doc-base file cannot be parsed to find a
    document id. Closes: #555677
  * Typo. Closes: #555659
  * cmake: Set CTEST_OUTPUT_ON_FAILURE when running test suite.
    Closes: #555807

 -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400

debhelper (7.4.3) unstable; urgency=low

  [ Valery Perrin ]
  * update french translation. Closes: #494300, #477703
  * add --previous at po4a command into Makefile
  * add dh, dh_auto_install, dh_auto_clean, dh_auto_configure,
    dh_auto_install, dh_auto_test, dh_bugfiles, dh_icons, dh_installifupdown,
    dh_installudev, dh_lintian, dh_prep into po4a.cfg manpages list
  * fix a spelling mistake in dh_makeshlibs man french
    translation (#494300 part 2)
  
  [ Joey Hess ]
  * dh_perl: Do not look at perl scripts under /usr/share/doc.
    Closes: #546683
  * Allow dpkg-architecture to print errors to stderr. Closes: #548636
  * python_distutils: Run default python last, not first, and pass --force
    to setup.py install to ensure that timestamps do not prevent installation
    of the scripts built for the default python, with unversioned shebang
    lines. Closes: #547510 (Thanks, Andrew Straw)

 -- Joey Hess <joeyh@debian.org>  Thu, 01 Oct 2009 14:37:38 -0400

debhelper (7.4.2) unstable; urgency=low

  * Man page typo. Closes: #545443
  * dh: Remove duplicate dh_installcatalogs list. Closes: #545483
    (It was only run once due to logging.)
  * dh_installdocs: Add --link-doc option that can be used to link
    documentation directories. This is easier to use and more flexible
    than the old method of running dh_link first to make a broken symlink.
    Closes: #545676 Thanks, Colin Watson
  * Reorder dh_pysupport call in dh sequence to come before
    dh_installinit, so the generated postinst script registers