@@ -23,6 +23,9 @@ debhelper (7.4.4) UNRELEASED; urgency=low
   * Typo. Closes: #555659
   * cmake: Set CTEST_OUTPUT_ON_FAILURE when running test suite.
     Closes: #555807
+  * autoconf: If configure fails, cat config.log. Intended to make
+    it easier to debug configure script failures on autobuilders.
+    Closes: #556384
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
 
